// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create preview of nodes 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <PreviewItemValue>
          foo
        </PreviewItemValue>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    is
     
  </span>
  <span
    className="parameterName"
  >
    Running, Canceled or Completed
  </span>
</Fragment>
`;

exports[`should create preview of selected nodes linked by nor 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <PreviewItemValue>
          foo
        </PreviewItemValue>
        <span
          className="previewItemOperator"
        >
           
          and
           
        </span>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <PreviewItemValue>
          foo
        </PreviewItemValue>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    were
     
  </span>
  <span
    className="parameterName"
  >
    Not executed
  </span>
</Fragment>
`;

exports[`should create preview of selected nodes linked by or 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <PreviewItemValue>
          foo
        </PreviewItemValue>
        <span
          className="previewItemOperator"
        >
           
          or
           
        </span>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <PreviewItemValue>
          foo
        </PreviewItemValue>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    is
     
  </span>
  <span
    className="parameterName"
  >
    Running, Canceled or Completed
  </span>
</Fragment>
`;

exports[`should show the id of the flow node if the name is null 1`] = `
<PreviewItemValue>
  bar
</PreviewItemValue>
`;
